# SAGA/init_scenario_api/internal/api/v1/get_scenario_status/contract.go
@@ -1,0 +1,10 @@
+package get_scenario_status
+
+import (
+	"context"
+	"init_scenario_api/internal/models/dto"
+)
+
+type GetScenarioStatusUseCase interface {
+	GetScenarioStatus(ctx context.Context, scenarioUUID string) (*dto.GetScenarioStatusResponse, error)
+}
